fixes spacing of selected cities list

--- a/src/components/map-components/Map.scss
+++ b/src/components/map-components/Map.scss
@@ -19,7 +19,7 @@
             font-weight:bold;
             display:flex;
             justify-content:space-between;
-            width:80%;
+            width:100%;
         }
 
         span {
@@ -27,7 +27,9 @@
         }
 
         ul {
-            width:97%;
+            width:77.6%;
+            padding-inline-start: 0px;
+            margin: 0 auto;
         }
 
         form {
